# TrafficBench

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  DEVELOPMENT.md  Pipfile  README.md  pyproject.toml
.github/workflows/: build_nrf.yml  py_publish.yml  py_release.yml  py_unittest.yml  qa_tests.yml
host/: README.md  filter_logs.py  glue_config.py  requirements.txt  trx_analyze.py  trx_dump.py
host/flocklab/: extract_data.xsh
host/terminal/: extract_data.xsh
py_package/: README.md  pyproject.toml  setup.cfg
py_package/examples/: firmware_patch_node_id.py  process_shepherd.py  process_tbench_logs.py  receive_logs.py
py_package/schedule_builder/: Readme.md  build.py
py_package/tests/: test_examples.py
py_package/trafficbench/: __init__.py  _lognplot_client.py  airtime.py  checksum.py  cli_extract.py  cli_filter_logs.py  cli_proto.py  cli_serial_uart.py  cli_trx_analyze.py  cli_trx_dump.py  crc.py  file_database.py  glue_config.py  rssi.py
