[project]
name = "trafficbench"
description = "a tool suite for the experimental exploration of concurrent packet transmissions and their consequences (physical layer effects) in low-power wireless networks"
keywords = ["concurrent transmission", "physical layer", "low-power", "wireless", "rssi", "scheduling", "synchronization"]

authors = [{name = "Carsten Herrmann", email = "carsten.herrmann@tu-dresden.de"}, {name = "Ingmar Splitt"}]
maintainers = [{email = "ingmar.splitt@tu-dresden.de"}]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
requires-python = ">= 3.8"
dependencies = [
    "numpy<2.0.0",
    "tables<=3.9.0",
    "cbor2",
    "crcmod",
    "chromalog",
    "pyserial",
    "typer",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/trafficbench/"
Tracker = "https://github.com/orgua/trafficbench/issues"
Source = "https://github.com/orgua/trafficbench"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
glue = [
    "glue-core",
    "glueviz",
    "matplotlib",
]
lognplot = ["lognplot"]
dev = [
    "twine",
    "pre-commit",
    "pyright",
]
test = [
    "pytest",
    "coverage",
    "shepherd-core[elf]",
]

[project.scripts]
trafficbench = "trafficbench.cli:app"

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = ["*/trafficbench/*"]


[tool.setuptools]
package-dir = {"" = "."}
zip-safe = true
include-package-data = true
platforms = ["unix", "linux", "osx", "cygwin", "win32", "win64"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.package-data]
"*" = ["README.md", "*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "trafficbench.__version__"}

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
addopts = "-vvv --stepwise"
